--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
     h1 #{heading}
-    p first paragraph xxx
+    p first paragraph 
     p now lets loop 
     each item in data  
         p #{item}
