--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -3,5 +3,6 @@ block content
     h1 #{heading}
     p first paragraph 
     p now lets loop 
+    p A new test for git
     each item in data  
         p #{item}
