Another test by Faith

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -3,6 +3,6 @@ block content
     h1 #{heading}
     p first paragraph 
     p now lets loop 
-    p A new test for git
+    p A new test for git by Faith
     each item in data  
         p #{item}
