--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -4,5 +4,7 @@ block content
     p first paragraph 
     p now lets loop 
     p A new test for git by Faith
+
+    p cook food 
     each item in data  
         p #{item}
