faith second push

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -6,5 +6,6 @@ block content
     p A new test for git by Faith
 
     p cook food 
+    p roehampton university
     each item in data  
         p #{item}
