sending front-end

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -1,5 +1,7 @@
-html 
-    head    
+doctype html
+html
+    head
         title #{title}
-    body 
+        block head
+    body
         block content
