sending some part of frot-end

--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -251,7 +251,7 @@ block append head
     /* Main shows ends here */
     /* Main categories starts here */
     .main-categories h1 {
-      padding: 20px;
+      padding: 10px;
       text-align: center; 
     }
     .categories-container {
@@ -266,13 +266,14 @@ block append head
       margin: 5px;
       border-radius: 10px;
       width: 180px;
-      padding: 20px;
+      padding: 10px;
       line-height: 1.6;
       position: relative;
     }
     .categories-container .categories-list img {
       width: 150px;
-      height: 150px;
+      height: 100px;
+      
     }
     .categories-list-text p {
       color: var(--ash);
@@ -408,12 +409,12 @@ block content
       .logo
         i.fa-solid.fa-shield-cat.fa-flip SoundScape
       .nav-links
-        a(href="home.pug") Home
-        a(href="shows.pug") Shows
-        a(href="hosts.pug") Hosts
-        a(href="about.pug") About
-        a(href="contact.pug") Contact
-        a.nav-login(href="login.pug") Login
+        a(href="home") Home
+        a(href="shows") Shows
+        a(href="hosts") Hosts
+        a(href="about") About
+        a(href="contact") Contact
+        a.nav-login(href="login") Login
         i.fa-solid.fa-xmark
       i.fa-solid.fa-bars
     header
@@ -421,7 +422,7 @@ block content
         h1 Explore, discover, and fall in love with podcasts in 
           span SoundScape!
         h3 Dive into a world where every sound tells a story, from thrilling narratives and insightful discussions to educational talks and light-hearted banter.
-        a(href="login.html") Get Started
+        a(href="login") Get Started
       .header-img
         img(src="https://images.pexels.com/photos/1181658/pexels-photo-1181658.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="")
         img(src="https://images.pexels.com/photos/682082/pexels-photo-682082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="")
@@ -466,11 +467,11 @@ block content
       section
         h2.footer-section-subheading Quick Links
         .footer-links
-          a(href="home.pug") Home
-          a(href="shows.pug") Shows
-          a(href="hosts.pug") Hosts
-          a(href="about.pug") About Us
-          a(href="login.pug") Login
+          a(href="home") Home
+          a(href="shows") Shows
+          a(href="hosts") Hosts
+          a(href="about") About Us
+          a(href="login") Login
       section
         h2.footer-section-subheading Contact Us
         .footer-contact
