--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -2,6 +2,4 @@ extends layout
 block content
     h1 #{heading}
     p first paragraph 
-    p now lets loop 
-    each item in data  
-        p #{item}
+    p now lets loop  edited
