--- a/app/views/shows.pug
+++ b/app/views/shows.pug
@@ -382,12 +382,12 @@ block content
         main.main-shows
             h1 Trending Shows
             .shows-container
-                each val in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
+                each show in data
                     .shows-list
-                        img(src='images/pod6.webp', alt='')
+                        img(src=show.CoverImageURL, alt=show.Title)
                         .show-list-text
-                            h3 Comedy Interviews
-                            p Get ready to laugh out loud with our latest comedy interview! Tune in for your dose of joy and jest!
+                            h3 show.Title
+                            p show.Description 
                             a(href='#') Listen Now
         footer
             section
