Final Push for Sprint Three

--- a/app/views/login.pug
+++ b/app/views/login.pug
@@ -358,7 +358,7 @@ block content
                 i.fa-solid.fa-shield-cat.fa-flip
                 | SoundScape
             .nav-links
-                a(href='index') Home
+                a(href='home') Home
                 a(href='shows') Shows
                 a(href='hosts') Hosts
                 a(href='about') About
